# rust_nuggets

./: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  sqlite.db
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
