[package]
name = "rust_nuggets"
version = "0.1.0"
edition = "2021"
default-run = "rust_nuggets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
error-chain = "0.12.4"
futures-util = "0.3.30"
k256 = "0.13.3"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json", "blocking", "stream"] }
select = "0.6.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
num = "0.4"
ansi_term = "0.12.1"
