[package]
name = "rust_nuggets"
version = "0.1.0"
edition = "2021"
default-run = "rust_nuggets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
error-chain = "0.12.4"
futures-util = "0.3.30"
k256 = "0.13.3"
rand = "0.8.5"
sha3 = "0.10"
reqwest = { version = "0.12.3", features = ["json", "blocking", "stream"] }
select = "0.6.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
num = "0.4"
ansi_term = "0.12.1"
hyper = { version = "1.2.0", features = ["full"] }
hyperlocal = "0.8.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
socketioxide = { version = "0.8", features = ["state"] }
sqlx = { version = "0.5.9", features = [
    "runtime-async-std-native-tls",
    "sqlite",
] }
async-std = { version = "1.6", features = ["attributes"] }
futures = "0.3.18"
aes-gcm = "0.10.3"
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.3.1"
hex = "0.4"
